# LindenmayerSystem

./: CMakeLists.txt
include/catch2/: catch.hpp
include/lindenmayer-system/: lindenmayer.hpp
src/lindenmayer-system/: lindenmayer.cpp
test/: lindenmayer.cpp  main.cpp
